<resources>
    <string name="app_name">Travalerts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="please_login_to_your_account">Please login to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">LOGIN</string>
    <string name="or">OR</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="by_signing_up_you_agree_with_our_terms_amp_conditions"><![CDATA[By signing up, you agree to Tourist Attractions Terms of Service and Privacy Policy.]]></string>
    <string name="no_internet_found_or_check_your_connection">No Internet found. Check your connection or try again!</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="coming_soon">Coming soon!</string>
    <string name="toast_message_network_call_failure_something_went_wrong">Something went wrong! Please try again later.</string>
    <string name="toast_message_network_call_time_out">Network call time out. Please try again.</string>
    <string name="phone_number_440_xxxx_xxxxxx">Phone number (+440-xxxx-xxxxxx)</string>
    <string name="toast_msg_login_successful">Login successful</string>
    <string name="toast_msg_signup_successful">SignUp successful</string>
    <string name="create_an_account">Create an account</string>
    <string name="settings">Settings</string>
    <string name="share_with_your_friends">Share with your friends</string>
    <string name="help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="other_options">Other Options</string>
    <string name="home">Home</string>
    <string name="add_tourist_attraction">Add Tourist Attraction</string>
    <string name="my_added_tourist_attractions">My Added Tourist Attractions</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="my_places">My Places</string>
    <string name="add_">Add Place</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="confirm_password">Confirm Passwrod</string>
    <string name="search">Search</string>

    <string name="email_subject_help_and_support"><![CDATA[Travalerts App - Help & Support]]></string>
    <string name="choose_email_client">Choose an email client</string>
    <string name="edit">Edit</string>
    <string name="email_is_not_valid">Email is not valid</string>
    <string name="password_is_too_weak">Password is too weak</string>
    <string name="enter_place_name">Enter place name</string>
    <string name="enter_place_description">Enter place description</string>
    <string name="upload">Upload</string>
    <string name="choose_image">Choose Image</string>
    <string name="logout">Logout</string>
    <string name="location">Location</string>
    <string name="profile_info">Profile Info</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="toast_message_something_went_wrong">Something went wrong! Please try again later.</string>
    <string name="you_have_not_added_any_place_yet">You have not added any place yet.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_place_address">Enter place address</string>
    <string name="update">Update</string>
    <string name="skip">Skip</string>
    <string name="share_your_experience">Share your experience</string>
    <string name="write_your_experience">Write your experience...</string>
    <string name="upload_image_or_video">Upload Image or Video</string>
    <string name="shared_experiences">Shared Experiences</string>
    <string name="submit">Submit</string>
    <string name="share">Share</string>
    <string name="non_visitor">Non-Visitor</string>
    <string name="place_description">Place Description</string>
    <string name="place_name">Place Name</string>
    <string name="address">Address</string>
    <string name="add_place">Add Place</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="pick_place">Pick place</string>
    <string name="default_info_title">Default info title</string>
    <string name="default_info_snippet">Default info snippet</string>
    <string name="gps_network_not_enabled">GPS network not enabled</string>
    <string name="open_location_settings">Open location settings</string>
    <string name="Cancel">Cancel</string>
    <string name="choose_another_location">Choose Another Location</string>
    <string name="no_expiration_has_been_shared_so_far">NO expiration has been shared so far.</string>
    <string name="location_permission_detail_explanation">Travalerts App requires location permission for giving real-time notification about visiting tourist places. The app collects location data to enable identification of the visit place is a tourist attraction or not. The app collects the location data even if the app is closed or not in use for giving this feature.\n\nTravalerts App also uses location data to show your current position on the map when adding or updating your custom tourist place.</string>
    <string name="location_permission_required">Location Permission Required</string>


</resources>