<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"
            app:iconTint="@color/colorPrimary" />

        <item
            android:id="@+id/nav_my_places"
            android:icon="@drawable/ic_location"
            android:title="@string/my_added_tourist_attractions"
            app:iconTint="@color/colorPrimary" />

        <item
            android:id="@+id/nav_add_location"
            android:icon="@drawable/ic_add_location"
            android:title="@string/add_tourist_attraction"
            app:iconTint="@color/colorPrimary" />

        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_bell"
            android:title="@string/notification"
            app:iconTint="@color/colorPrimary" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account"
            android:title="@string/profile"
            app:iconTint="@color/colorPrimary" />

    </group>

    <item android:title="@string/other_options">
        <menu>

            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings"
                app:iconTint="@color/colorPrimary" />

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share_with_your_friends"
                app:iconTint="@color/colorPrimary" />

            <item
                android:id="@+id/nav_privacy_policy"
                android:icon="@drawable/ic_gavel"
                android:title="@string/privacy_policy"
                app:iconTint="@color/colorPrimary" />

            <item
                android:id="@+id/nav_help_and_support"
                android:icon="@drawable/ic_help"
                android:title="@string/help_amp_support"
                app:iconTint="@color/colorPrimary" />

        </menu>

    </item>

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_log_out"
        android:title="@string/logout"
        app:iconTint="@color/colorPrimary" />
</menu>