<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/myPlacesFragment"
        android:icon="@drawable/ic_location"
        android:title="@string/my_places" />

    <item
        android:id="@+id/addPlaceActivity"
        android:icon="@drawable/ic_add_location"
        android:title="@string/add_" />

    <item
        android:id="@+id/notificationFragment"
        android:icon="@drawable/ic_bell"
        android:title="@string/notification" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_account"
        android:title="@string/profile" />

</menu>