<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_background_color"
    tools:context=".views.fragments.auth.SignUpFragment">
    <!--<FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg3"
        android:alpha="0.3"/>-->

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:indeterminate="true"
        android:visibility="gone"
        app:backgroundTint="@color/colorAccent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivAppTitle"
        android:layout_width="wrap_content"
        android:layout_height="96dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_default"
        android:src="@drawable/title_logo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCreateAnAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivAppTitle"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_default"
        android:text="@string/create_an_account"
        android:textColor="@color/gray"
        />




    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llUserNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCreateAnAccount"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiETFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_weight="1"
            android:background="@drawable/backgraound_input_layout_border_only"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textEmailAddress"
            android:maxLength="@integer/maxLengthEmail"
            android:padding="@dimen/padding_small"
            android:paddingStart="@dimen/padding_default"
            android:paddingTop="@dimen/padding_small"
            android:paddingEnd="@dimen/padding_default"
            android:paddingBottom="@dimen/padding_small"
            android:textColorHint="@color/textHintColorGray" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiETLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_default"
            android:layout_weight="1"
            android:background="@drawable/backgraound_input_layout_border_only"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textEmailAddress"
            android:maxLength="@integer/maxLengthEmail"
            android:padding="@dimen/padding_small"
            android:paddingStart="@dimen/padding_default"
            android:paddingTop="@dimen/padding_small"
            android:paddingEnd="@dimen/padding_default"
            android:paddingBottom="@dimen/padding_small"
            android:textColorHint="@color/textHintColorGray" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tiETEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llUserNameInput"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_default"
        android:background="@drawable/backgraound_input_layout_border_only"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLength="@integer/maxLengthEmail"
        android:padding="@dimen/padding_small"
        android:paddingStart="@dimen/padding_default"
        android:paddingTop="@dimen/padding_small"
        android:paddingBottom="@dimen/padding_small"
        android:textColorHint="@color/textHintColorGray"
        app:drawableTint="@color/gray"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tiETPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tiETEmail"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_default"
        android:background="@drawable/backgraound_input_layout_border_only"
        android:ems="10"
        android:hint="@string/phone_number_440_xxxx_xxxxxx"
        android:inputType="phone"
        android:maxLength="@integer/maxLengthPhoneNumber"
        android:padding="@dimen/padding_small"
        android:paddingStart="@dimen/padding_default"
        android:paddingLeft="@dimen/padding_default"
        android:paddingTop="@dimen/padding_small"
        android:paddingEnd="@dimen/padding_default"
        android:paddingRight="@dimen/padding_small"
        android:paddingBottom="@dimen/padding_small"
        android:textColorHint="@color/textHintColorGray"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tiETPhoneNumber"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_default"
        android:textColorHint="@color/textHintColorGray"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/textColorGray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiETPassword"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/backgraound_input_layout_border_only"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="@integer/maxLengthEmail"
            android:paddingStart="@dimen/padding_default"
            android:paddingEnd="@dimen/padding_small"
            android:paddingTop="@dimen/padding_small"
            android:textColorHint="@color/textHintColorGray"
            app:passwordToggleEnabled="true" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tilPassword"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_default"
        android:textColorHint="@color/textHintColorGray"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/textColorGray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiETConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/backgraound_input_layout_border_only"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLength="@integer/maxLengthEmail"
            android:paddingStart="@dimen/padding_default"
            android:paddingEnd="@dimen/padding_small"
            android:paddingTop="@dimen/padding_small"
            android:textColorHint="@color/textHintColorGray"
            app:passwordToggleEnabled="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginBottom="@dimen/margin_default">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAlreadyHaveAnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/already_have_an_account"
            android:textColor="@color/gray" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_toEndOf="@+id/tvAlreadyHaveAnAccount"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/padding_small"
            android:text="@string/login"
            android:textColor="@color/colorPrimary"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSignUpNotice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tilConfirmPassword"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_default"
        android:text="@string/by_signing_up_you_agree_with_our_terms_amp_conditions"
        android:textColor="@color/textColorGray"
        android:textSize="@dimen/text_size_caption" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_below="@+id/tvSignUpNotice"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@drawable/button_background_blue"
        android:paddingStart="@dimen/padding_xx_large"
        android:paddingEnd="@dimen/padding_xx_large"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        app:elevation="4dp" />

</RelativeLayout>